# treelite-dask-serializer

./: .gitignore  .gitmodules  README.md  output.txt  setup.py
treelite_dask_serializer/: benchmark.pyx  builder.pyx  dmlc.pxd  example.py  reference_serializer.pyx  serializer.pyx  treelite_frontend.pxd  treelite_model.pxd  treelite_model.pyx
treelite_minimal/: CMakeLists.txt
treelite_minimal/cmake/: Utils.cmake
treelite_minimal/include/treelite/: base.h  c_api.h  c_api_common.h  frontend.h  tree.h
treelite_minimal/src/: builder.cc  model.cc  optable.cc  reference_serializer.cc  serializer.cc  tester.cc
treelite_minimal/src/c_api/: c_api.cc  c_api_error.cc  c_api_error.h
